--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,10 @@
 export(compare_by_idx)
 export(compare_by_pos)
 export(create_pos)
+export(face_to_face)
+export(getFeatures)
+export(get_by_idx)
+export(get_by_pos)
 export(get_not_consecutive)
 export(get_topologies)
 export(make_gtf_txdb)
@@ -20,11 +24,16 @@ importFrom(ape,root)
 importFrom(ape,write.tree)
 importFrom(dplyr,filter)
 importFrom(dplyr,slice)
+importFrom(ggnewscale,new_scale_fill)
 importFrom(ggplot2,aes)
+importFrom(ggplot2,geom_line)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_vline)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,labs)
+importFrom(ggtree,geom_tiplab)
+importFrom(ggtree,geom_tree)
+importFrom(ggtree,ggtree)
 importFrom(plotly,ggplotly)
 importFrom(readr,read_tsv)
 importFrom(rtracklayer,import)
