--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(get_topologies)
 export(make_gtf_txdb)
 export(order_tree_pos)
 export(plotFeatures)
+export(plotKaryogram)
 export(plotTopologies)
 export(plotTreeSummary)
 export(read_gtf)
@@ -21,6 +22,7 @@ export(read_treefile)
 import(shiny)
 import(shinyWidgets)
 import(shinydashboard)
+importFrom(GenomeInfoDb,seqinfo)
 importFrom(GenomicRanges,GRanges)
 importFrom(Gviz,GeneRegionTrack)
 importFrom(Gviz,plotTracks)
@@ -34,8 +36,10 @@ importFrom(dplyr,slice)
 importFrom(dplyr,summarise)
 importFrom(ggnewscale,new_scale_fill)
 importFrom(ggplot2,aes)
+importFrom(ggplot2,element_blank)
 importFrom(ggplot2,facet_wrap)
 importFrom(ggplot2,geom_line)
+importFrom(ggplot2,geom_linerange)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_vline)
 importFrom(ggplot2,ggplot)
